--- a/logo.css
+++ b/logo.css
@@ -34,7 +34,7 @@ body {
 }
 
 .navbar-scroll {
-  background-color: white;
+    background-color: white;
     animation-duration: 2s;
     animation-name: smooth;
     -moz-box-shadow: 1px 1px 1px #999;
@@ -114,8 +114,8 @@ body {
 
 /*Main logo animation on the front page of the Jupyter website */
 #main-logo {
-	height: calc(100% - 20px);
-	margin-top: 10px;
+    height: calc(100% - 20px);
+    margin-top: 10px;
     padding-left: 20px;
 }
 
@@ -194,17 +194,17 @@ body {
 }
 
 .header-darkgray {
-  /* Only using dark gray for documentation page, add padding top to center in header */
-  background-color: #757575;
-  color: white;
+    /* Only using dark gray for documentation page, add padding top to center in header */
+    background-color: #757575;
+    color: white;
 }
 
 .header-grey {
-  background-color: #f5f5f5;
+    background-color: #f5f5f5;
 }
 
 .header-white {
-  background-color: white;
+    background-color: white;
 }
 
 /* Section elements */
@@ -215,10 +215,10 @@ body {
 }
 
 .section-grey {
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #E0E0E0;
-  border-top: 1px solid #E0E0E0;
-  padding: 56px 0;
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #E0E0E0;
+    border-top: 1px solid #E0E0E0;
+    padding: 56px 0;
 }
 
 /* Used to specifying when a section is at the top or bottom of the page to apply appropriate border */
@@ -311,7 +311,7 @@ body {
 .jupytercon-section {
     background: url('img/jupytercon-ny.jpg');
     background-size: 100%;
-    color:#E46E2E;
+    color: #d58512;
     border-bottom-color: #e0e0e0;
     border-left-style: none;
     border-style: solid;
@@ -325,7 +325,7 @@ body {
 }
 
 .jupytercon-section p{
-  margin-bottom: 40px;
+    margin-bottom: 40px;
 
 }
 .jupytercon-section p a{
@@ -654,7 +654,7 @@ body {
 }
 
 .resource-name {
-     margin-top: 6px;
+    margin-top: 6px;
 }
 
 .resource-button {
@@ -687,9 +687,9 @@ body {
 /* Bootstrap Breakpoint Media Queries */
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-  .section-white, .section-grey {
-    padding: 5% 0;
-  }
+    .section-white, .section-grey {
+        padding: 5% 0;
+    }
 }
 
 @media (max-width: 1200px) {
@@ -840,8 +840,8 @@ body {
         text-align: center;
     }
     .navbar-logo {
-      height: 36px;
-      margin-top: 4px;
+        height: 36px;
+        margin-top: 4px;
     }
     .nav>li>a {
         font-size: 13px;
